<resources>
    <string name="app_name">TepDeal</string>
    <string name="loading">loading..</string>
    <string name="reoading">reloading..</string>
    <string name="success">Success</string>
    <string name="not_found">can\'t reach server</string>
    <string name="bad_request">server received wrong data</string>
    <string name="unauthotized">unauthorized user</string>
    <string name="server_error">Server is down, please contact support</string>
    <string name="no_internet">please check your internet connection</string>
    <string name="no_data">No data yet </string>
    <string name="error">Something went wrong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_error">Email is required</string>
    <string name="email">Email</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="password_error">Password is required</string>
    <string name="letsgo">Let\'s Deal</string>
    <string name="or">OR</string>
    <string name="facebook_login">Login with facebook</string>
    <string name="create_account">Create an account</string>
    <string name="empty_field">Empty Field</string>
    <string name="welcome">Welcome %1$s</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="full_name">Full Name</string>
    <string name="conf_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="city">City</string>
    <string name="select_city">Select City</string>
    <string name="additional_info">Additional Info</string>
    <string name="bio">Bio</string>
    <string name="bio_hint">Write your bio here</string>
    <string name="terms_of_condition">Terms of Condition</string>

</resources>
