<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register">

    <View
        android:id="@+id/top_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/bg_green_login3"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/TopDeal"
        style="@style/LargeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <EditText
        android:id="@+id/ed_mail"
        style="@style/LoginEdiTextStyle"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_edit_text_error"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tv_mail_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/login_editext_error_color"
        app:layout_constraintStart_toStartOf="@+id/ed_mail"
        app:layout_constraintTop_toBottomOf="@+id/ed_mail"
        tools:text="@string/email_error" />


    <EditText
        android:id="@+id/ed_password"
        style="@style/LoginEdiTextStyle"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mail_error" />

    <TextView
        android:id="@+id/tv_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/login_editext_error_color"
        app:layout_constraintStart_toStartOf="@+id/ed_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_password"
        tools:text="@string/password_error" />

    <TextView
        android:id="@+id/textView4"
        style="@style/MeduimTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forget_password"
        app:layout_constraintEnd_toEndOf="@+id/ed_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_error" />

    <Button
        android:id="@+id/btn_sign"
        style="@style/LoginButton"
        android:text="@string/letsgo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/item_height_50"
        android:layout_height="@dimen/item_height_50"
        android:background="@drawable/bg_circle"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/top_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_view" />


    <LinearLayout
        android:id="@+id/btn_facebook"
        style="@style/LoginButton"
        android:background="@drawable/bg_facebook_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            android:src="@drawable/ic_facebook"
            android:text="@string/facebook_login"
            app:layout_constraintBottom_toBottomOf="@+id/btn_facebook"
            app:layout_constraintEnd_toStartOf="@+id/btn_facebook"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_facebook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/facebook_login"
            android:textColor="@color/white" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_create_account"
        style="@style/LoginButton"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_createacount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook"
        tools:text="@string/letsgo" />
</androidx.constraintlayout.widget.ConstraintLayout>